--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
             <version>${deltaspike.version}</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>5.3</version>
+        </dependency>
     </dependencies>
 
     <build>
